added timerbox and reduced arcade mode countdown to one turn
Signed-off-by: Peter Aloisi <plaloisi@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,13 @@
   height: 5px;
 }
 
+.arcadeMoveTimerBox {
+  position: fixed;
+  top: 5px;
+  left: 5px;
+  display: none;
+}
+
 .dark-mode {
   position: fixed;
   top: 5px;
