Updated variable names for timer and changed timer layout to now be horizontal to the Move Timer Message
Signed-off-by: Peter Aloisi <plaloisi@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,20 +65,20 @@
   visibility: hidden;
 }
 
-.progressbar {
+.timer-bar {
   background-color: white;
   border: 1px black solid;
   padding: 1px;
 }
 
-.progressbar > div {
+.timer-bar > div {
   background-color: black;
   width: 40%;
   /* Adjust with JavaScript */
   height: 5px;
 }
 
-.arcadeMoveTimerBox {
+.moveTimerBox {
   position: fixed;
   top: 5px;
   left: 5px;
