game mode UI change
I implement the game mode choice UI, now they all integration on the same page with instruction. And improved the appearance of the scoring, using color to distinguish the importance. And use red to strong the present of the rule different. In the end, create a forfeit button to help forfeit.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,20 @@
   transition: 0.5s all;
 }
 
+.button {
+    background-color: #EC7063;
+    border: none;
+    color: white;
+    padding: 5px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+
 .body-container {
   display: flex;
 }
@@ -173,4 +187,7 @@
     color: white;
     background-color: black;
   }
+
+
+
 }
