--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+body {
+	font-family: "Verdana", "Arial", sans-serif;
+	background-color: #DCE0EE;
+	color: #40536D;
+	margin: 0;
+}
+.dark {
+	background-color: #121212;
+	color: #ccc;
+
 .board {
 	display: grid;
 	grid-template-rows: repeat(7, 10vh);
