--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,11 @@ body {
 	color: #40536D;
 	margin: 0;
 }
+
 .dark {
 	background-color: #121212;
 	color: #ccc;
+}
 
 .board {
 	display: grid;
@@ -24,8 +26,40 @@ body {
 	transition: 0.2s all;
 }
 
+#wknight {
+	transition: 0.4s all;
+}
+
+.board > div:nth-child(odd) {
+	background: #22232A;
+	color: black;
+}
+
+.board > div:nth-child(even) {
+	background: transparent;
+	color: black;
+}
+
 .board > div > img {
 	transition: 0.5s all;
+}
+
+.boardModal {
+	position:absolute;
+	display:grid;
+	place-items: center center;
+	width:100%;
+	height:100%;
+	z-index:1000;
+	background-color: transparent !important;
+}
+
+.loss_modal {
+	text-align: center;
+	display:none;
+	padding: 20px 80px;
+	background: rgba(0,0,0,0.7) !important;
+	color:white;
 }
 
 .button {
