--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,51 @@
+@import url('fonts.css');
+
 body {
 	font-family: "Verdana", "Arial", sans-serif;
 	background-color: #DCE0EE;
 	color: #40536D;
 	margin: 0;
 }
-
 .dark {
 	background-color: #121212;
 	color: #ccc;
 }
+
+/* Header Styles */
+header {
+	padding: 20px;
+	height: 110px;
+}
+header * {
+	margin: 0;
+}
+header img {
+	width: 100px;
+	float: left;
+}
+.title {
+	height: 100px;
+	float: left;
+	margin-left: 25px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.title > h1 {
+	margin-top: 15px;
+	font-size: 34px;
+	text-transform: uppercase;
+	font-family: "Exo 2", sans-serif;
+}
+.title > h2 {
+	font-family: "Raleway", sans-serif;
+	font-size: 24px;
+	font-weight: 500;
+	letter-spacing: 1.6px;
+	margin-left: 35px;
+	margin-top: -8px;
+}
+/* Header Styles End */
 
 .board {
 	display: grid;
