--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ header img {
 	position: relative;
 	width: 70vh;
 	height: 70vh;
+	margin-bottom: 20px;
 }
 
 .board > div {
@@ -65,6 +66,19 @@ header img {
 
 #wknight {
 	transition: 0.4s all;
+}
+
+.figure {
+	max-height: 29px;
+	max-width: 29px;
+	height: 100%;
+	width: 100%;
+	background: radial-gradient(circle, rgba(255,255,255,0.19) 0%, rgba(255,255,255,1) 100%);
+}
+
+.fullyDeployed>.figure{
+	background: radial-gradient(circle, rgba(255,200,200,0.19) 0%, rgba(255,200,200,1) 100%);
+
 }
 
 .movementProjection{
@@ -175,6 +189,7 @@ input:checked[type="checkbox"]::before{
 
 .body-container {
 	display: flex;
+	margin: 0px 20px;
 }
 
 .sidebar {
@@ -294,7 +309,7 @@ input:checked[type="checkbox"]::before{
 	background-image: url('../images/light-mode.svg');
 }
 
-@media screen and (max-aspect-ratio: 4/3) {
+@media (max-width: 1024px) {
 	.body-container {
 		flex-direction: column;
 		text-align: center;
@@ -302,10 +317,9 @@ input:checked[type="checkbox"]::before{
 	}
 
 	.board {
-		grid-template-rows: repeat(7, 14vw);
-		grid-template-columns: repeat(7, 14vw);
-		width: 98vw;
-		height: 98vw;
+		width: 100%;
+		height: auto !important;
+		justify-content: center;
 	}
 
 	.sidebar > div > p {
@@ -318,7 +332,7 @@ input:checked[type="checkbox"]::before{
 	}
 
 	.sidebar > div > div {
-		top: calc(1em + 8px);
+		top: calc(1em + 38px);
 		text-align: center;
 		left: 50%;
 		transform: translateX(-50%);
